# task-executor

./: .gitignore  README.md  main.py  pyproject.toml  request.py  requirements.txt  test_flight.py
.github/workflows/: build.yml
missions/: airdop.txt  detect.txt  landing.txt  takeoff.txt
missions/land/: ne.txt
missions/sim/: takeoff.txt  waypoint.txt
missions/test-flight/: wp_0.txt  wp_1.txt
missions/test-flight/land/: nw.txt  se.txt  sw.txt
missions/test-flight/takeoff/: ne.txt  nw.txt  se.txt  sw.txt
src/task_executor/: __init__.py  catalog.py
src/task_executor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/task_executor/enums/: mavlink.py
src/task_executor/models/: config.py  context_config.py  logging_config.py  message_endpoint.py  messenger_config.py  request.py  task.py  zmq_config.py  zmq_endpoint.py
src/task_executor/modules/: catalog.py  context.py  monitor.py  queue.py  receiver.py
src/task_executor/tasks/: airdrop.py  detect.py  land.py  takeoff.py  waypoint.py
src/task_executor/utils/: safe_logger.py  utils.py  zmq_broker.py  zmq_subscriber.py
testing/: delayed_trigger.py  driver.py
